# selftune

./: .coderabbit.yaml  .gitignore  .oxfmtrc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRD.md  README.md  ROADMAP.md  biome.json  lefthook.yml  lint-architecture.ts  lint_architecture.py  llms.txt  package.json  pyproject.toml  risk-policy.json  ruff.toml  skills-lock.json  tsconfig.json
.claude/agents/: diagnosis-analyst.md  evolution-reviewer.md  integration-guide.md  pattern-analyst.md
.github/: release-notes.json
.github/workflows/: auto-bump-cli-version.yml  ci.yml  codeql.yml  deploy-service.yml  publish.yml  scorecard.yml  sync-skill-to-site.yml
apps/local-dashboard/: HANDOFF.md  index.html  package.json  tsconfig.json  vite.config.ts
cli/selftune/: __init__.py  activation-rules.ts  agent-guidance.ts  alpha-identity.ts  alpha-upload-contract.ts  analytics.ts  auto-update.ts  canonical-export.ts  constants.ts  (+32 more)
dashboard/: index.html
docs/: escalation-policy.md  golden-principles.md  integration-guide.md  launch-playbook-tracker.md
scripts/: link-claude-workspace.sh  sync-skill-version.ts
service/: Dockerfile  config.ts  fly.toml  server.ts  types.ts
skill/: SKILL.md  selftune.contribute.json  settings_snippet.json
tests/: autonomy-proof.test.ts  canonical-export.test.ts  globals.d.ts  lint-architecture.test.ts  observability.test.ts  orchestrate-overlap.test.ts  orchestrate.test.ts  signal-orchestrate.test.ts  sync.test.ts  testing-readiness.test.ts
worker/: package.json  schema.sql  tsconfig.json  wrangler.toml
(+409 files in other folders)
